# SIM-Ollin

./: .gitignore  pyproject.toml
app/: main.py
app/public/: globals.py  utils.py
app/public/Assets/URDF/BasePlate/: CMakeLists.txt  package.xml
app/public/Assets/URDF/Cube/: CMakeLists.txt  package.xml
app/public/Assets/URDF/Dorna_URDF2/: CMakeLists.txt  package.xml
app/public/Temp/: .gitignore
app/software/: dataset_rn.csv
app/software/ia_model/: RN_training.ipynb  Trajectory_generator.py  batch_orchestator.py  build_sequence_dataset.py  dataset_rn.csv  feature_columns.pkl  ga_settings.py  layout_optimizer.py  rn_dataset_builder.py  scaler_v1.pkl  sequence_predictor.py  surrogate.py  surrogate_v1.keras  train_history.json  train_sequence_model.py  training.py
app/software/ia_model/models_for_surrogate/: delta_bounds.pkl  feature_columns.pkl  scaler_v1.pkl
app/software/robot/: ConfigRB.yaml  Dorna_Controller.py  connect.py  dorna_instance.py  robot_kinematics.py
app/software/simulation/: controller.py  dataset_rn.csv  physical_sync.py  scene.py  sequence_worker.py  simulation_settings.py  virtual_controller.py
app/software/ui/: LayoutOptimizedDesignTab.py  analysis_dashboard.py  control_tab.py  sequence_4b020f8b.json  sequence_5c86f6f5.json  sequence_b04f880e.json  sequence_b442b6b1.json  sequence_c0c39ff6.json  sequence_f6189ac5.json  smart_trajectory_tab.py  step_widget.py
app/software/ui/layouts/: layout_23b6efd4.json  layout_5832233c.json  layout_5990d986.json  layout_65220ede.json  layout_7dfc2602.json
(+44 files in other folders)
